# ir-viewer

./: .gitignore  README.md  ir-viewer  pyproject.toml  run.sh  specs.md
src/ir_viewer/: app.py  core.py
