[project]
name = "ir-viewer"
version = "0.1.0"
description = "Terminal-first IR viewer for MLIR with navigation aids."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "textual>=0.58.0",
  "textual-autocomplete>=4.0.0",
]

[project.scripts]
ir-viewer = "ir_viewer.app:main"

[tool.uv]
package = true
